# uuid-tool

./: .gitignore  Cargo.toml  Changelog.md  Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.windows  LICENSE  README.md
src/: main.rs
