[package]
name = "uuid-tool"
version = "1.2.0"
authors = ["Silvio Sabo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
cli-clipboard = "0.4.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Link-time optimization.
codegen-units = 1  # Reduce codegen units to 1 to reduce binary size.